crates/aerro/tests/ui/fail/code_missing_category.rs
use aerro;

#[derive(aerro::Aerro)]
pub enum E {
    #[aerro(code = NotFound)]
    Bad,
}

fn main() {}
